5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_996.log
== TEST (2019-03-11 14:55:59) 
-- CODE:
print("*")print("*")
print(" ")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    print("*")print("*")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:28) 
-- CODE:
print("*****")
print(" (* o o *)")
print("  *  ^  *")
print(" * --- * ")
print("*****")
-- OUTPUT:
*****
 (* o o *)
  *  ^  *
 * --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:33) 
-- CODE:
print("*****")
print(" (* o o *)")
print("  *  ^  *")
print(" * --- * ")
print("*****")
-- EXECUTION TIME:
0.167095
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
 * --- * 
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
